cleaned up the code of all the warnings, and errors. fixed the scrollbar

--- a/src/Components/ItemSection/ItemSection.css
+++ b/src/Components/ItemSection/ItemSection.css
@@ -5,11 +5,30 @@
   align-items: center;
   background-color: black;
   color: antiquewhite;
-  /* border: 1vh solid rgb(22, 22, 22); */
   overflow-x: scroll;
   margin-top: 2vh;
+  padding-bottom: 20px;
 }
 
-.ItemMain::-webkit-scrollbar {
-  width: 0;
+/* width and height of the scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 15px;
+}
+
+/* background color of the scrollbar */
+::-webkit-scrollbar-track {
+  background-color: #222;
+}
+
+/* color of the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #ed9112;
+  border-radius: 12px;
+  box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* color of the scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #ed9112;
 }
