--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
   align-items: center;
   background-color: black;
   padding: 1rem 1rem;
+  z-index: 9;
 }
 
 .Bar {
@@ -91,6 +92,9 @@
 }
 
 @media screen and (max-width: 800px) {
+  .main {
+    justify-content: space-between;
+  }
   .container {
     display: none;
   }
